# zellij-what-time

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  justfile  rust-toolchain.toml  test-layout.kdl  zj-workspace-dev-multi-tab.kdl  zj-workspace-dev.kdl  zj-workspace-no-nvim.kdl  zj-workspace.kdl
.github/workflows/: ci.yml  release.yml
src/: configuration.rs  date_time.rs  main.rs
