[package]
name = "zellij-what-time"
version = "0.1.1"
authors = ["pirafrank"]
edition = "2021"

[dependencies]
zellij-tile = "=0.40.1"
ansi_term = "0.12.1"
chrono = "0.4.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[profile.release]
lto = true
strip = true
